--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,3 +1,19 @@
+header {
+  max-width: 1000px;
+  display: flex;
+  justify-content: space-around;
+  margin: 0 auto;
+  border-bottom: 2px dashed @navigation-border;
+  padding-bottom: 20px;
+  margin-top: 20px;
+
+  .header-container {
+    width: 800px;
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
 .home {
 
   .content-section {
@@ -6,8 +22,8 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
-   
-    
+
+
     .text-content {
       width: 48%;
       padding-right: 1%;
