--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,16 @@
-// Navigation Styles here
+.header-container {
+  nav {
+    width: 40%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: black;
+    font-size: 1.6rem;
+
+    a {
+      color: black;
+      text-decoration: none;
+      font-weight: lighter;
+    }
+  }
+}
