--- a/css/index.css
+++ b/css/index.css
@@ -182,9 +182,10 @@ img {
   font-weight: lighter;
 }
 .footer {
-  width: 100%;
+  max-width: 1000px;
   border-top: 2px dashed silver;
   background: #FFEBCD;
+  margin: 0 auto;
 }
 .footer p {
   text-align: center;
@@ -205,6 +206,13 @@ header .header-container {
   width: 800px;
   display: flex;
   justify-content: space-between;
+}
+.home .top-content {
+  border-bottom: 2px dashed #C0C0C0;
+  padding-bottom: 20px;
+}
+.home .top-content h2 {
+  padding-top: 20px;
 }
 .home .content-section {
   margin: 30px 0;
@@ -251,4 +259,18 @@ header .header-container {
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+.home .content-pick .btn {
+  height: 40px;
+  width: 200px;
+  background-color: #3fa5b5;
+  color: white;
+  font-size: 1.8rem;
+  border-radius: 10px;
+  border: 2px solid black;
+}
+.home .content-pick .btn:hover {
+  cursor: pointer;
+  border: 2px solid #6b1212;
+  color: #6b1212;
 }
