--- a/less/footer.less
+++ b/less/footer.less
@@ -1,8 +1,9 @@
 .footer {
-  width: 100%;
+  max-width: 1000px;
   border-top: 2px dashed silver;
   background: @sandy-beach;
-  
+  margin: 0 auto;
+
   p {
     text-align: center;
     color: @font-color;
