--- a/less/home-page.less
+++ b/less/home-page.less
@@ -16,6 +16,15 @@ header {
 
 .home {
 
+  .top-content {
+    border-bottom: 2px dashed @navigation-border;
+    padding-bottom: 20px;
+
+    h2 {
+      padding-top: 20px;
+    }
+  }
+
   .content-section {
     margin: 30px 0;
     display: flex;
@@ -72,6 +81,10 @@ header {
     .destination {
       width: 30%;
       margin-bottom: 30px;
+    }
+
+    .btn {
+      .custom-button(200px, 40px, white, #3fa5b5)
     }
   }
 }// home
