--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,14 @@
-// Mixins in here
+.custom-button(@width, @height, @color, @background-color) {
+  height: @height;
+  width: @width;
+  background-color: @background-color;
+  color: @color;
+  font-size: 1.8rem;
+  border-radius: 10px;
+  border: 2px solid black;
+  &:hover {
+    cursor: pointer;
+    border: 2px solid #6b1212;
+    color: #6b1212;
+  }
+}
