--- a/less/home-page.less
+++ b/less/home-page.less
@@ -78,9 +78,18 @@ header {
     display: flex;
     justify-content: space-between;
 
+    @media @mobile {
+      flex-wrap: wrap;
+    }
+
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+      @media @mobile {
+        width: 80%;
+        margin: 0 10% 30px 10%;
+      }
     }
 
     .btn {
