--- a/less/home-page.less
+++ b/less/home-page.less
@@ -45,11 +45,21 @@ header {
     .text-content {
       width: 48%;
       padding-right: 1%;
+
+      @media @mobile {
+        padding: 0px;
+        width: 100%;
+      }
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
+
+      @media @mobile {
+        padding: 0px;
+        width: 100%;
+      }
 
       img {
         border-radius: 10px;
@@ -64,11 +74,22 @@ header {
     .text-content {
       padding-left: 1%;
       padding-right: 0;
+
+      @media @mobile {
+        order: 0;
+        padding: 0px;
+        width: 100%;
+      }
     }
 
     .img-content {
       padding-right: 1%;
       padding-left: 0;
+
+      @media @mobile {
+        order: 1;
+        padding: 0px;
+      }
     }
   }
 
