--- a/css/index.css
+++ b/css/index.css
@@ -294,6 +294,11 @@ header .header-container {
   width: 75%;
   margin: 0 auto 30px;
 }
+@media (max-width: 500px) {
+  .home .content-destination {
+    width: 100%;
+  }
+}
 .home .content-destination img {
   border-radius: 10px;
 }
