--- a/less/mixins.less
+++ b/less/mixins.less
@@ -12,6 +12,11 @@
     color: #6b1212;
   }
 
+  @media @tablet {
+    width: 60%;
+    margin: 0 auto;
+  }
+
   @media @mobile {
     width: 100%;
   }
