--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,7 +1,7 @@
 .header-container {
 
   h1 {
-    @media @mobile {
+    @media @tablet {
       margin: 0 auto 20px auto;
     }
   }
@@ -14,7 +14,7 @@
     color: black;
     font-size: 1.6rem;
 
-    @media @mobile {
+    @media @tablet {
       width: 100%;
       justify-content: space-around;
     }
