--- a/css/index.css
+++ b/css/index.css
@@ -168,7 +168,7 @@ img {
   width: 100%;
   margin: 0 auto;
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .header-container h1 {
     margin: 0 auto 20px auto;
   }
@@ -181,7 +181,7 @@ img {
   color: black;
   font-size: 1.6rem;
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .header-container nav {
     width: 100%;
     justify-content: space-around;
@@ -218,13 +218,13 @@ header .header-container {
   display: flex;
   justify-content: space-between;
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   header .header-container {
     flex-wrap: wrap;
     width: 85%;
   }
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .home {
     width: 86%;
   }
@@ -246,7 +246,7 @@ header .header-container {
   width: 48%;
   padding-right: 1%;
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .home .content-section .text-content {
     padding: 0px;
     width: 100%;
@@ -255,8 +255,9 @@ header .header-container {
 .home .content-section .img-content {
   width: 48%;
   padding-left: 1%;
+  display: flex;
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .home .content-section .img-content {
     padding: 0px;
     width: 100%;
@@ -264,6 +265,12 @@ header .header-container {
 }
 .home .content-section .img-content img {
   border-radius: 10px;
+}
+@media (max-width: 800px) {
+  .home .content-section .img-content img {
+    margin: 0 auto;
+    align-self: center;
+  }
 }
 .home .inverse-content {
   padding-bottom: 30px;
@@ -273,7 +280,7 @@ header .header-container {
   padding-left: 1%;
   padding-right: 0;
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .home .inverse-content .text-content {
     order: 0;
     padding: 0px;
@@ -284,7 +291,7 @@ header .header-container {
   padding-right: 1%;
   padding-left: 0;
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .home .inverse-content .img-content {
     order: 1;
     padding: 0px;
@@ -294,13 +301,14 @@ header .header-container {
   width: 75%;
   margin: 0 auto 30px;
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .home .content-destination {
     width: 100%;
   }
 }
 .home .content-destination img {
   border-radius: 10px;
+  width: 100%;
 }
 .home .content-pick {
   padding-top: 30px;
@@ -308,7 +316,7 @@ header .header-container {
   display: flex;
   justify-content: space-between;
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .home .content-pick {
     flex-wrap: wrap;
   }
@@ -317,10 +325,12 @@ header .header-container {
   width: 30%;
   margin-bottom: 30px;
 }
-@media (max-width: 500px) {
+@media (max-width: 800px) {
   .home .content-pick .destination {
     width: 80%;
     margin: 0 10% 30px 10%;
+    display: flex;
+    flex-wrap: wrap;
   }
 }
 .home .content-pick .btn {
@@ -336,6 +346,12 @@ header .header-container {
   cursor: pointer;
   border: 2px solid #6b1212;
   color: #6b1212;
+}
+@media (max-width: 800px) {
+  .home .content-pick .btn {
+    width: 60%;
+    margin: 0 auto;
+  }
 }
 @media (max-width: 500px) {
   .home .content-pick .btn {
